<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_margin="5dp"
    android:id="@+id/Definition">

    <RelativeLayout
        android:id="@+id/VarBlock"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_corner_definition"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="34dp">

        <TextView
            android:id="@+id/textStatus"
            android:layout_width="237dp"
            android:layout_height="21dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="164dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="56dp"
            android:gravity="center"
            android:text="@string/status"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textType"
            android:layout_width="177dp"
            android:layout_height="23dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="220dp"
            android:layout_marginBottom="56dp"
            android:gravity="center"
            android:text="@string/type"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/editLeft"
            android:layout_width="172dp"
            android:layout_height="49dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="223dp"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:hint="@string/name"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/editRight"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/editRight"
            android:layout_width="216dp"
            android:layout_height="49dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="180dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:hint="@string/value"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>