<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="100dp"
    android:layout_height="40dp"
    android:layout_margin="5dp"
    android:id="@+id/Begin">

    <TextView
        android:id="@+id/textType"
        android:layout_width="137dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/size"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.931"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.274" />

    <TextView
        android:id="@+id/textStatus"
        android:layout_width="137dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/size"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.931"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.274" />

    <Spinner
        android:id="@+id/spinnerComparator"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:entries="@array/thins"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/editLeft"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/editMedium"
        android:layout_width="137dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/size"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.931"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.274" />

    <EditText
        android:id="@+id/editRight"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:hint="@string/expression2"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/spinnerComparator"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/editLeft"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:hint="@string/expression1"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <RelativeLayout
        android:id="@+id/VarBlock"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_corner_begin"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="34dp">

        <TextView
            android:id="@+id/textBegin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:text="@string/begin"
            android:textAlignment="center"
            android:textColor="@color/white" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>